# glust

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  gemini.md  run_e2e.sh
docs/: architecture.md  intro.md  setup.md
migrations/: 20260209131700_initial_schema.up.sql
src/: main.rs
src/domain/: log.rs  mod.rs
src/ingest/: http.rs
src/storage/: db.rs  repository.rs
stress-test/: Cargo.toml  STRESS_TEST.md  run_stress_test.sh  wrk_otlp.lua
stress-test/src/: generate_payload.rs
test-client/: Cargo.toml
test-client/src/: main.rs
tests/: integration_test.rs
