[package]
name = "test-client"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["http2"] }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.28.0", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio", "logs", "trace"] }
tracing-opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.28.0", features = ["logs", "grpc-tonic", "http-proto"] }
opentelemetry-appender-tracing = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
